# banshee-ai-agent

./: .gitignore  CLAUDE.md  DATABASE_TEST_ENHANCEMENT_PLAN.md  README.md  biome.json  package.json  playwright-simple.config.ts  playwright.config.ts  tailwind.config.js  test-config.json  test-minimal.spec.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml  test.yml
.mcp/agents/: code-implementer.ts  coordination-logic.ts  enhanced-verifier.ts  intelligent-planner.ts
.mcp/commands/: verify.ts
.mcp/reports/: gap-analysis-report.md  implementation-progress-report.md  swarm-verification-report.md
.mcp/sessions/: session-logger.ts
.mcp/swarm/: architecture-agent.ts  execute-swarm.ts  performance-agent.ts  quality-agent.ts  security-agent.ts  swarm-coordinator.ts
.mcp/verification-contexts/: protocol.md  testing-prompts.md
e2e/: app.spec.ts  auth.spec.ts  chat.spec.ts  dashboard.spec.ts  error-handling.spec.ts  keyboard-shortcuts.spec.ts  mcp.spec.ts  memory-management.spec.ts  navigation.spec.ts  settings.spec.ts  wallet.spec.ts  workspace.spec.ts
e2e/utils/: global-setup.ts  global-teardown.ts  tauri-helpers.ts  test-data.ts  test-helpers.ts
playwright-report/: index.html
src/: App.tsx  AppSimple.tsx  DebugApp.tsx  SimpleApp.tsx  globals.css  index.html  main-debug.tsx  main-simple.tsx  main.ts  main.tsx  test.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/ai/: command_whitelist.rs  commands.rs  csrf.rs  encryption.rs  error_sanitization.rs  http_client.rs  mod.rs  secure_commands.rs  security.rs  security_middleware.rs  storage.rs  tests.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: embedding_migration.rs  embeddings.rs  graph_commands.rs  integration_tests.rs  memory.rs  memory_flow_tests.rs  memory_sequence_models.rs  mod.rs  neural_embeddings.rs  neural_knowledge_graph.rs  neural_network.rs  neural_tests.rs  schema.rs  simple_commands.rs  simple_memory.rs  tests.rs
src-tauri/src/mcp/: commands.rs  mod.rs  oauth_storage.rs
src-tauri/src/validation/: graph_validator.rs  integration_tests.rs  mod.rs
src/components/: CommandPalette.tsx  DebugApp.tsx  EmbeddingMigration.tsx  ErrorBoundary.tsx
src/hooks/: useAgentSessions.ts  useApiKeys.ts  useKeyboardShortcuts.ts  useMCP.ts  useMCPBridge.ts  useMCPServers.ts  useNativeMCP.ts  usePerformanceMonitor.ts  useSystemStats.ts  useToast.ts
src/lib/: cache.ts  database.ts  embedding-migration.ts
src/store/: agentStore.ts  index.ts  mcpStore.ts  settingsStore.ts  themeStore.ts  uiStore.ts
src/test/: custom-matchers.ts  jest-extended.d.ts  setup.ts  test-helpers.ts  utils.ts
test-results/app-Banshee-App-should-display-navigation-elements-chromium/: error-context.md  video.webm
test-results/auth-Authentication-E2E-Te-18e98-ndle-OAuth-success-callback-chromium/: video.webm
test-results/auth-Authentication-E2E-Te-7de3b-ntication-state-persistence-chromium/: video.webm
test-results/auth-Authentication-E2E-Te-9a2c7-te-OAuth-flow-for-Anthropic-chromium/: video.webm
test-results/auth-Authentication-E2E-Te-ac1b8-Auth-authentication-options-chromium/: video.webm
test-results/auth-Authentication-E2E-Te-cffa9--authentication-as-fallback-chromium/: video.webm
test-results/auth-Authentication-E2E-Te-e64af-splay-authentication-status-chromium/: video.webm
test-results/auth-Authentication-E2E-Tests-should-handle-OAuth-errors-chromium/: video.webm
test-results/auth-Authentication-E2E-Tests-should-logout-from-provider-chromium/: video.webm
test-results/auth-Authentication-E2E-Tests-should-validate-API-key-format-chromium/: video.webm
test-results/chat-Chat-Portal-E2E-Tests-4cdd6-versation-with-confirmation-chromium/: video.webm
(+230 files in other folders)
