[package]
name = "banshee"
version = "0.1.0"
description = "Banshee - AI Agent Platform with MCP Support"
authors = ["Banshee Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "banshee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tracing"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-oauth = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
# Security and encryption dependencies
ring = "0.17"
base64 = "0.22"
rand = "0.8"
lazy_static = "1.4"
regex = "1.10"
futures = "0.3"
# Agent memory and vector search dependencies  
rusqlite = { version = "0.31", features = ["bundled", "blob", "functions", "vtab"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ndarray = "0.15"
bincode = "1.3"
sha2 = "0.10"
once_cell = "1.19"
# Neural network dependencies - using direct FANN-inspired implementation
# ruv-fann repository has submodule issues, implementing core features directly
polars = { version = "0.36", features = ["lazy", "csv", "parquet", "json", "temporal", "strings", "dtype-datetime"] }
fastrand = "2.0"
# OAuth and encryption dependencies
aes-gcm = "0.10"
webbrowser = "1.0"
thiserror = "1.0"
# Simplified embedding approach - will use basic similarity functions instead of full transformer models for now
hex = "0.4"
# Async trait support for embedding migration
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
serial_test = "3.0"

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

